target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'<>'", "'='", "'<'", "'>'", "'<='", 
                     "'>='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "';'", "':'", "'..'", "','", "':='" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "INTTYPE", "REALTYPE", "BOOLTYPE", 
                      "STRINGTYPE", "ARRAYTYPE", "VAR", "BEGIN", "END", 
                      "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", "DO", 
                      "IF", "THEN", "ELSE", "RETURN", "WHILE", "FUCNTION", 
                      "PROCEDURE", "WITH", "TRUE", "FALSE", "OF", "ADD_OP", 
                      "SUB_OP", "MUL_OP", "DIV_OP", "NOT_EQ_OP", "EQUAL", 
                      "LES_THAN", "GRE_THAN", "LOE_THAN", "GOE_THAN", "NOT", 
                      "AND", "OR", "DIV", "MOD", "LSB", "RSB", "LB", "RB", 
                      "LP", "RP", "SEMI", "COLON", "D_DOT", "COMMA", "ASSIGN", 
                      "BLOCK_COMMENT1", "BLOCK_COMMENT2", "LINE_COMMENT", 
                      "WS", "INTLIT", "EXPONENT_", "REALLIT", "ID", "STRINGLIT", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_variable_decalation = 1
    RULE_list_of_declaration = 2
    RULE_type_data = 3
    RULE_primitive_type = 4
    RULE_compound_type = 5
    RULE_list_of_id = 6
    RULE_function_declaration = 7
    RULE_procedure_declaration = 8
    RULE_stat = 9
    RULE_match_stat = 10
    RULE_other_stat = 11
    RULE_unmatch_stat = 12
    RULE_assign_stat = 13
    RULE_while_stat = 14
    RULE_for_stat = 15
    RULE_break_stat = 16
    RULE_continue_stat = 17
    RULE_return_stat = 18
    RULE_with_stat = 19
    RULE_call_stat = 20
    RULE_compound_stat = 21
    RULE_exp = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_literals = 29
    RULE_call_exp = 30
    RULE_index_exp = 31
    RULE_list_of_exp = 32

    ruleNames =  [ "program", "variable_decalation", "list_of_declaration", 
                   "type_data", "primitive_type", "compound_type", "list_of_id", 
                   "function_declaration", "procedure_declaration", "stat", 
                   "match_stat", "other_stat", "unmatch_stat", "assign_stat", 
                   "while_stat", "for_stat", "break_stat", "continue_stat", 
                   "return_stat", "with_stat", "call_stat", "compound_stat", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "literals", "call_exp", "index_exp", "list_of_exp" ]

    EOF = Token.EOF
    BOOLLIT=1
    INTTYPE=2
    REALTYPE=3
    BOOLTYPE=4
    STRINGTYPE=5
    ARRAYTYPE=6
    VAR=7
    BEGIN=8
    END=9
    BREAK=10
    CONTINUE=11
    FOR=12
    TO=13
    DOWNTO=14
    DO=15
    IF=16
    THEN=17
    ELSE=18
    RETURN=19
    WHILE=20
    FUCNTION=21
    PROCEDURE=22
    WITH=23
    TRUE=24
    FALSE=25
    OF=26
    ADD_OP=27
    SUB_OP=28
    MUL_OP=29
    DIV_OP=30
    NOT_EQ_OP=31
    EQUAL=32
    LES_THAN=33
    GRE_THAN=34
    LOE_THAN=35
    GOE_THAN=36
    NOT=37
    AND=38
    OR=39
    DIV=40
    MOD=41
    LSB=42
    RSB=43
    LB=44
    RB=45
    LP=46
    RP=47
    SEMI=48
    COLON=49
    D_DOT=50
    COMMA=51
    ASSIGN=52
    BLOCK_COMMENT1=53
    BLOCK_COMMENT2=54
    LINE_COMMENT=55
    WS=56
    INTLIT=57
    EXPONENT_=58
    REALLIT=59
    ID=60
    STRINGLIT=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def variable_decalation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Variable_decalationContext)
            else:
                return self.getTypedRuleContext(MPParser.Variable_decalationContext,i)


        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.Function_declarationContext,i)


        def procedure_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Procedure_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.Procedure_declarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 66
                    self.variable_decalation()
                    pass
                elif token in [MPParser.FUCNTION]:
                    self.state = 67
                    self.function_declaration()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 68
                    self.procedure_declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUCNTION) | (1 << MPParser.PROCEDURE))) != 0)):
                    break

            self.state = 73
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_decalationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def list_of_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.List_of_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.List_of_declarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_variable_decalation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decalation" ):
                return visitor.visitVariable_decalation(self)
            else:
                return visitor.visitChildren(self)




    def variable_decalation(self):

        localctx = MPParser.Variable_decalationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variable_decalation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MPParser.VAR)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.list_of_declaration()
                self.state = 77
                self.match(MPParser.SEMI)
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_of_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_id(self):
            return self.getTypedRuleContext(MPParser.List_of_idContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_of_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_declaration" ):
                return visitor.visitList_of_declaration(self)
            else:
                return visitor.visitChildren(self)




    def list_of_declaration(self):

        localctx = MPParser.List_of_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_of_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.list_of_id()
            self.state = 84
            self.match(MPParser.COLON)
            self.state = 85
            self.type_data()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_dataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def compound_type(self):
            return self.getTypedRuleContext(MPParser.Compound_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_type_data

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_data" ):
                return visitor.visitType_data(self)
            else:
                return visitor.visitChildren(self)




    def type_data(self):

        localctx = MPParser.Type_dataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_data)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTTYPE, MPParser.REALTYPE, MPParser.BOOLTYPE, MPParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAYTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.compound_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def REALTYPE(self):
            return self.getToken(MPParser.REALTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MPParser.STRINGTYPE, 0)

        def BOOLTYPE(self):
            return self.getToken(MPParser.BOOLTYPE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.INTTYPE) | (1 << MPParser.REALTYPE) | (1 << MPParser.BOOLTYPE) | (1 << MPParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAYTYPE(self):
            return self.getToken(MPParser.ARRAYTYPE, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def D_DOT(self):
            return self.getToken(MPParser.D_DOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def SUB_OP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUB_OP)
            else:
                return self.getToken(MPParser.SUB_OP, i)

        def getRuleIndex(self):
            return MPParser.RULE_compound_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_type" ):
                return visitor.visitCompound_type(self)
            else:
                return visitor.visitChildren(self)




    def compound_type(self):

        localctx = MPParser.Compound_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compound_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MPParser.ARRAYTYPE)
            self.state = 94
            self.match(MPParser.LSB)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB_OP:
                self.state = 95
                self.match(MPParser.SUB_OP)


            self.state = 98
            self.match(MPParser.INTLIT)
            self.state = 99
            self.match(MPParser.D_DOT)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB_OP:
                self.state = 100
                self.match(MPParser.SUB_OP)


            self.state = 103
            self.match(MPParser.INTLIT)
            self.state = 104
            self.match(MPParser.RSB)
            self.state = 105
            self.match(MPParser.OF)
            self.state = 106
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_of_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_list_of_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_id" ):
                return visitor.visitList_of_id(self)
            else:
                return visitor.visitChildren(self)




    def list_of_id(self):

        localctx = MPParser.List_of_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_of_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(MPParser.ID)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 109
                self.match(MPParser.COMMA)
                self.state = 110
                self.match(MPParser.ID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUCNTION(self):
            return self.getToken(MPParser.FUCNTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def compound_stat(self):
            return self.getTypedRuleContext(MPParser.Compound_statContext,0)


        def list_of_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.List_of_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.List_of_declarationContext,i)


        def variable_decalation(self):
            return self.getTypedRuleContext(MPParser.Variable_decalationContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_function_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = MPParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MPParser.FUCNTION)
            self.state = 117
            self.match(MPParser.ID)
            self.state = 118
            self.match(MPParser.LB)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 119
                self.list_of_declaration()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 120
                    self.match(MPParser.SEMI)
                    self.state = 121
                    self.list_of_declaration()
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 129
            self.match(MPParser.RB)
            self.state = 130
            self.match(MPParser.COLON)
            self.state = 131
            self.type_data()
            self.state = 132
            self.match(MPParser.SEMI)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 133
                self.variable_decalation()


            self.state = 136
            self.compound_stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Procedure_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def compound_stat(self):
            return self.getTypedRuleContext(MPParser.Compound_statContext,0)


        def list_of_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.List_of_declarationContext)
            else:
                return self.getTypedRuleContext(MPParser.List_of_declarationContext,i)


        def variable_decalation(self):
            return self.getTypedRuleContext(MPParser.Variable_decalationContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procedure_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_declaration" ):
                return visitor.visitProcedure_declaration(self)
            else:
                return visitor.visitChildren(self)




    def procedure_declaration(self):

        localctx = MPParser.Procedure_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_procedure_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MPParser.PROCEDURE)
            self.state = 139
            self.match(MPParser.ID)
            self.state = 140
            self.match(MPParser.LB)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 141
                self.list_of_declaration()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 142
                    self.match(MPParser.SEMI)
                    self.state = 143
                    self.list_of_declaration()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 151
            self.match(MPParser.RB)
            self.state = 152
            self.match(MPParser.SEMI)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 153
                self.variable_decalation()


            self.state = 156
            self.compound_stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def match_stat(self):
            return self.getTypedRuleContext(MPParser.Match_statContext,0)


        def unmatch_stat(self):
            return self.getTypedRuleContext(MPParser.Unmatch_statContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = MPParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stat)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match_stat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.unmatch_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Match_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MPParser.IF, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def match_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Match_statContext)
            else:
                return self.getTypedRuleContext(MPParser.Match_statContext,i)


        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def other_stat(self):
            return self.getTypedRuleContext(MPParser.Other_statContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_match_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatch_stat" ):
                return visitor.visitMatch_stat(self)
            else:
                return visitor.visitChildren(self)




    def match_stat(self):
